2007-04-17  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/admin/admin.py (AdminClientFactory.clientConnectionFailed):
	* flumotion/twisted/pb.py
	  (ReconnectingFPBClientFactory.clientConnectionFailed,
	  ReconnectingFPBClientFactory.clientConnectionLost):
	Add destination of where the connection was failed to in debug
	output.

2007-04-17  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/twisted/pb.py
	  (ReconnectingPBClientFactory.clientConnectionFailed,
	  ReconnectingPBClientFactory.clientConnectionLost):
	Add destination of where the connection was failed to in debug.
	Fixes #612.

2007-04-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* env.in:
	  Actually put the pkgconfig directory in.

2007-04-16  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/producers/ivtv/ivtv.xml:
	Correct directory containing ivtv.

2007-04-16  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/producers/ivtv/ivtv.xml:
	We are no longer in our own project!

2007-04-16  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* configure.ac:
	* flumotion/component/producers/Makefile.am:
	* flumotion/component/producers/ivtv/Makefile.am:
	* flumotion/component/producers/ivtv/__init__.py:
	* flumotion/component/producers/ivtv/ivtv.py (Ivtv,
	  Ivtv.get_pipeline_string):
	* flumotion/component/producers/ivtv/ivtv.xml:
	New ivtv-producer component.

2007-04-16  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/admin/gtk/main.py (main):
	Fix grammar.

2007-04-16  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* data/glade/admin.glade:
	Fix open recent connection button tooltip and where it maps to.
	Add "Open Existing Connection" menu item.
	* flumotion/admin/gtk/client.py (Window.connection_open_recent_cb,
	  Window.connection_open_existing_cb, Window.got_state,
	  Window.on_import_response):
	Add support for "Open Existing Connection"