@@ -21,57 +21,11 @@
     <widget class="GtkTable" id="volume-widget">
       <property name="border_width">12</property>
       <property name="visible">True</property>
-      <property name="n_rows">5</property>
+      <property name="n_rows">50</property>
       <property name="n_columns">1</property>
       <property name="homogeneous">False</property>
       <property name="row_spacing">0</property>
       <property name="column_spacing">0</property>
-
-      <child>
-	<widget class="GtkLabel" id="label1">
-	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">Volume level:</property>
-	  <property name="use_underline">False</property>
-	  <property name="use_markup">False</property>
-	  <property name="justify">GTK_JUSTIFY_LEFT</property>
-	  <property name="wrap">False</property>
-	  <property name="selectable">False</property>
-	  <property name="xalign">0</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</widget>
-	<packing>
-	  <property name="left_attach">0</property>
-	  <property name="right_attach">1</property>
-	  <property name="top_attach">0</property>
-	  <property name="bottom_attach">1</property>
-	  <property name="x_padding">3</property>
-	  <property name="y_padding">3</property>
-	  <property name="x_options">fill</property>
-	  <property name="y_options"></property>
-	</packing>
-      </child>
-
-      <child>
-	<widget class="Custom" id="level-widget">
-	  <property name="height_request">24</property>
-	  <property name="visible">True</property>
-	  <property name="creation_function">flumotion.ui.fgtk.FVUMeter()</property>
-	  <property name="int1">0</property>
-	  <property name="int2">0</property>
-	  <property name="last_modification_time">Fri, 01 Apr 2005 15:03:49 GMT</property>
-	</widget>
-	<packing>
-	  <property name="left_attach">0</property>
-	  <property name="right_attach">1</property>
-	  <property name="top_attach">1</property>
-	  <property name="bottom_attach">2</property>
-	  <property name="x_padding">6</property>
-	  <property name="y_padding">3</property>
-	  <property name="y_options">fill</property>
-	</packing>
-      </child>
 
       <child>
 	<widget class="GtkLabel" id="label2">
@@ -91,8 +45,8 @@
 	<packing>
 	  <property name="left_attach">0</property>
 	  <property name="right_attach">1</property>
-	  <property name="top_attach">3</property>
-	  <property name="bottom_attach">4</property>
+	  <property name="top_attach">48</property>
+	  <property name="bottom_attach">49</property>
 	  <property name="x_padding">3</property>
 	  <property name="y_padding">3</property>
 	  <property name="x_options">fill</property>
@@ -115,8 +69,8 @@
 	<packing>
 	  <property name="left_attach">0</property>
 	  <property name="right_attach">1</property>
-	  <property name="top_attach">2</property>
-	  <property name="bottom_attach">3</property>
+	  <property name="top_attach">47</property>
+	  <property name="bottom_attach">48</property>
 	  <property name="x_padding">3</property>
 	  <property name="y_padding">3</property>
 	  <property name="x_options">fill</property>
@@ -193,8 +147,8 @@
 	<packing>
 	  <property name="left_attach">0</property>
 	  <property name="right_attach">1</property>
-	  <property name="top_attach">4</property>
-	  <property name="bottom_attach">5</property>
+	  <property name="top_attach">49</property>
+	  <property name="bottom_attach">50</property>
 	  <property name="x_padding">6</property>
 	  <property name="y_padding">3</property>
 	  <property name="x_options">fill</property>
